--- a/.gitignore
+++ b/.gitignore
@@ -254,3 +254,6 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/venv,windows,macos,visualstudiocode,python
+
+migrations/
+__init__.py
